--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -11,4 +11,12 @@
         android:scaleType="centerCrop"
         tools:background="@drawable/m1" />
 
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        tools:text="Movie Title" />
+
 </FrameLayout>
+
