--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,9 @@
     android:id="@+id/movies_grid"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnWidth="180dp"
+    android:columnWidth="200dp"
     android:horizontalSpacing="0dp"
     android:numColumns="auto_fit"
     android:stretchMode="columnWidth"
     android:verticalSpacing="0dp"
-    tools:context=".MainActivity"></GridView>
+    tools:context=".MainActivity" />
