--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -6,17 +6,9 @@
 
     <ImageView
         android:id="@+id/movie_image"
-        android:layout_width="185dp"
+        android:layout_width="match_parent"
         android:layout_height="274dp"
         android:scaleType="centerCrop"
         tools:background="@drawable/m1" />
-
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        tools:text="Movie Title" />
-
 </FrameLayout>
 
