--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/movie_image"
         android:layout_width="match_parent"
         android:layout_height="274dp"
-        android:scaleType="centerCrop"
+        android:scaleType="fitXY"
         tools:background="@drawable/m1" />
 </FrameLayout>
 
