--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
     tools:context="com.example.android.popularmovies.MovieDetail"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="81dp">
@@ -23,10 +28,10 @@
     <View
         android:layout_width="0dp"
         android:layout_height="106dp"
-        android:layout_marginTop="0dp"
         android:background="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@+id/iv_backdrop"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_backdrop" />
 
 
     <ImageView
@@ -81,7 +86,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="Plot"
+        android:text="@string/plot_label"
         android:textColor="#DD000000"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -97,6 +102,7 @@
         android:id="@+id/tv_plot_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -131,3 +137,5 @@
         tools:text="7.7" />
 
 </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
